[gpu-offload] Spike: generate TornadoVM kernels at runtime for arbitrary expressions
Probing thirteen query shapes, only two offload. The cost gate and the
hand-written kernel catalogue barely intersect: everything worth
offloading has no kernel, and the one kernel that exists is below the
calibrated floor. Adding shapes by hand cannot close that -- the space
of expressions is unbounded.

The obstacle was that TornadoVM resolves a kernel from its method
reference's SerializedLambda, needing a writeReplace() only javac emits.
Janino cannot produce one, which is what forced a fixed catalogue in the
first place.

But the compiler does not have to be Janino. This spike generates one
compilation unit holding both the kernel and the code that builds the
TaskGraph referencing it, compiles it at runtime with the real javac via
javax.tools, and runs it. EXP(v)*LN(v) + SIN(v)*COS(v), which has no
catalogue entry, executes on the device with max relative error 5.3e-15
across 1024 elements.

Not part of the offload path. It exists so the decision about how to
close the gap rests on a running program rather than an argument.

Costs recorded in FINDINGS.md: a JDK rather than a JRE at run time
(already required by TornadoVM), javac's compile time once per
expression per TaskManager, generated names must avoid OpenCL reserved
words (the first run failed on a method called 'kernel'), and generated
classes need --enable-preview.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>